# Notepad

./: .clang-format  .gitignore  CMakeLists.txt
src/: ImGuiBackend.hpp  filedata.hpp  graphics.hpp  main.cpp  notepad.hpp  window.cpp  window.hpp
